syntax = "proto3";
package lavanet.lava.subscription;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/lavanet/lava/v4/x/subscription/types";

message Subscription {
  string creator = 1; // creator pays for the subscription
  string consumer = 2; // consumer uses the subscription
  uint64 block = 3; // when the subscription was last recharged
  string plan_index = 4; // index (name) of plan
  uint64 plan_block = 5; // when the plan was created
  uint64 duration_bought = 6; // total requested duration in months
  uint64 duration_left = 7; // remaining duration in months
  uint64 month_expiry_time = 8; // expiry time of current month
  reserved 9;
  uint64 month_cu_total = 10; // CU allowance during current month
  uint64 month_cu_left = 11; // CU remaining during current month
  reserved 12;
  string cluster = 13;         // cluster key
  uint64 duration_total = 14;  // continous subscription usage
  reserved 15; // automatic renewal when the subscription expires
  FutureSubscription future_subscription = 16; // future subscription made with buy --advance-purchase
  string auto_renewal_next_plan = 17; // the next plan to subscribe to. If none is set, then auto renewal is disabled
  cosmos.base.v1beta1.Coin credit = 18 [(gogoproto.nullable) = false]; // credit = funds paid for the subscription which are used to pay to providers. reduced after paying providers
}

message FutureSubscription {
  string creator = 1; // creator pays for the future subscription. Will replace the original one once activated
  string plan_index = 2; // index (name) of plan
  uint64 plan_block = 3; // when the plan was created
  uint64 duration_bought = 4; // total requested duration in months
  cosmos.base.v1beta1.Coin credit = 5 [(gogoproto.nullable) = false]; // credit = funds paid for the subscription which are used to pay to providers. reduced after paying providers
}